// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`computeModifier can be used to ensure that the student has taken two courses across two departments 1`] = `
[
  {
    "_extraKeys": [
      "credits",
    ],
    "credits": 1,
    "department": [
      "CHEM",
      "BIO",
    ],
    "number": 111,
  },
  {
    "_extraKeys": [
      "credits",
    ],
    "credits": 1,
    "department": [
      "CHEM",
      "BIO",
    ],
    "number": 112,
  },
]
`;

exports[`computeModifier can be used to ensure that the student has taken two courses across two departments 2`] = `
[
  {
    "_extraKeys": [
      "credits",
    ],
    "credits": 1,
    "department": [
      "CHEM",
      "BIO",
    ],
    "number": 111,
  },
  {
    "_extraKeys": [
      "credits",
    ],
    "credits": 1,
    "department": [
      "CHEM",
      "BIO",
    ],
    "number": 112,
  },
]
`;

exports[`computeModifier checks for <things> from all children 1`] = `
[
  {
    "department": [
      "REL",
    ],
    "number": 111,
  },
]
`;

exports[`computeModifier checks for <things> from all children 2`] = `
{
  "$children": "$all",
  "$count": {
    "$num": 1,
    "$operator": "$gte",
  },
  "$from": "children",
  "$type": "modifier",
  "$what": "course",
}
`;

exports[`computeModifier checks for <things> from specified children 1`] = `
[
  {
    "department": [
      "REL",
    ],
    "number": 111,
  },
]
`;

exports[`computeModifier checks for <things> from specified children 2`] = `
{
  "$children": [
    {
      "$requirement": "Bible",
      "$type": "reference",
    },
  ],
  "$count": {
    "$num": 1,
    "$operator": "$gte",
  },
  "$from": "children",
  "$type": "modifier",
  "$what": "course",
}
`;

exports[`computeModifier checks for <things> from the filter 1`] = `
[
  {
    "department": [
      "REL",
    ],
    "number": 111,
  },
  {
    "department": [
      "REL",
    ],
    "number": 112,
  },
]
`;

exports[`computeModifier checks for <things> from the filter 2`] = `
{
  "$count": {
    "$num": 1,
    "$operator": "$gte",
  },
  "$from": "filter",
  "$type": "modifier",
  "$what": "course",
}
`;

exports[`computeModifier checks for <things> from the given where-clause 1`] = `
[
  {
    "department": [
      "REL",
    ],
    "number": 111,
  },
  {
    "department": [
      "REL",
    ],
    "number": 112,
  },
]
`;

exports[`computeModifier checks for <things> from the given where-clause 2`] = `
{
  "$count": {
    "$num": 1,
    "$operator": "$gte",
  },
  "$from": "where",
  "$type": "modifier",
  "$what": "course",
  "$where": {
    "$key": "department",
    "$operator": "$eq",
    "$type": "qualification",
    "$value": "REL",
  },
}
`;

exports[`computeModifier supports counting courses 1`] = `
[
  {
    "_extraKeys": [
      "credits",
    ],
    "credits": 1,
    "department": [
      "REL",
    ],
    "number": 111,
  },
  {
    "_extraKeys": [
      "credits",
    ],
    "credits": 1,
    "department": [
      "REL",
    ],
    "number": 112,
  },
  {
    "_extraKeys": [
      "credits",
    ],
    "credits": 1,
    "department": [
      "CSCI",
    ],
    "number": 251,
  },
]
`;

exports[`computeModifier supports counting courses 2`] = `
{
  "$children": "$all",
  "$count": {
    "$num": 3,
    "$operator": "$gte",
  },
  "$from": "children",
  "$type": "modifier",
  "$what": "course",
}
`;

exports[`computeModifier supports counting credits 1`] = `
[
  {
    "_extraKeys": [
      "credits",
    ],
    "credits": 1,
    "department": [
      "REL",
    ],
    "number": 111,
  },
  {
    "_extraKeys": [
      "credits",
    ],
    "credits": 1,
    "department": [
      "CSCI",
    ],
    "number": 251,
  },
]
`;

exports[`computeModifier supports counting credits 2`] = `
{
  "$children": "$all",
  "$count": {
    "$num": 2,
    "$operator": "$gte",
  },
  "$from": "children",
  "$type": "modifier",
  "$what": "credit",
}
`;

exports[`computeModifier supports counting departments 1`] = `
[
  {
    "_extraKeys": [
      "credits",
    ],
    "credits": 1,
    "department": [
      "CHEM",
      "BIO",
    ],
    "number": 111,
  },
  {
    "_extraKeys": [
      "credits",
    ],
    "credits": 1,
    "department": [
      "CHEM",
      "BIO",
    ],
    "number": 112,
  },
  {
    "_extraKeys": [
      "credits",
    ],
    "credits": 1,
    "department": [
      "CSCI",
    ],
    "number": 251,
  },
]
`;

exports[`computeModifier supports counting departments 2`] = `
{
  "$children": "$all",
  "$count": {
    "$num": 3,
    "$operator": "$gte",
  },
  "$from": "children",
  "$type": "modifier",
  "$what": "department",
}
`;
